--- a/front/src/styles/Card.css
+++ b/front/src/styles/Card.css
@@ -1,6 +1,6 @@
 .contenedor-card{
-    width: 60%;
-    height: 500px;
+    width: 45%;
+    height: 300px;
     margin: 10px 10px 50px;
     display: flex;
     flex-wrap: wrap;
@@ -20,7 +20,7 @@
     padding: 40px;
     font-family: Lato, sans-serif;
     font-weight: 400;
-    line-height: 1.5rem;
+    line-height: 1.2rem;
 }
 
 .nombre-card{
@@ -35,5 +35,5 @@
 
 .texto-card{
     font-size: 1.1rem;
-    text-align: justify;
+    text-align: center;
 }
