--- a/front/src/App.css
+++ b/front/src/App.css
@@ -10,12 +10,14 @@ html, body{
 }
 
 h1{
-  width: 100%;
+  width: 70%;
   font-size: 2.1em;
   font-family: Lato, sans-serif;
   font-weight: 700;
   line-height: 1.1;
   margin: 10px 0;
+  border-bottom: 2px solid black;
+  display: block;
 }
 
 .App{
@@ -35,4 +37,10 @@ display: flex;
 flex-wrap: wrap;
 align-items: center;
 justify-content: center; 
+}
+
+.one{
+  width: 50px;
+  height: 30px;
+  margin-right: -8px;
 }
