--- a/front/src/styles/Card.css
+++ b/front/src/styles/Card.css
@@ -8,6 +8,7 @@
     justify-content: center;
     background-color: #fff;
     box-shadow: 0 3px 8px 1px rgb(0 0 0 / 9%);
+    position: relative;
 }
 
 .imagen-card{
