--- a/front/src/styles/Card.css
+++ b/front/src/styles/Card.css
@@ -11,6 +11,7 @@
     box-shadow: 0 3px 8px 1px rgb(0 0 0 / 9%);
     position: relative;
     cursor: pointer;
+    transition: all .5s;
 }
 
 .imagen-card{
@@ -43,6 +44,7 @@
 
 .contenedor-card:hover{
     background: rgba(192, 192, 192, 0.307);
+    transform: scale(1.05);
 }
 
 @media (max-width: 1200px) {
