--- a/front/src/styles/Loader.css
+++ b/front/src/styles/Loader.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Passions+Conflict&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Passions+Conflict&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Moon+Dance&display=swap');
 
 .contenedor{
   margin: auto;
@@ -22,8 +23,7 @@
   top: 150px;
   margin: auto;
   font-size: 60px;
-  font-weight: 600;
-  font-family: 'Passions Conflict', cursive;;
+  font-family: 'Moon Dance', cursive;
 }
 
 .loader span{
